<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pic0"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="1"
        android:contentDescription="@string/betukesath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/betukesath" />

    <ImageView
        android:id="@+id/pic1"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/beautiful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beautiful" />

    <ImageView
        android:id="@+id/pic2"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/dancing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dancing" />

    <ImageView
        android:id="@+id/pic3"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/monoteddybear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monoteddybear" />

    <ImageView
        android:id="@+id/pic4"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/mostbeautiful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mostbeautiful" />

    <ImageView
        android:id="@+id/pic5"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/pyarebaby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pyarebaby" />

    <ImageView
        android:id="@+id/pic6"
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:contentDescription="@string/rishi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rishi" />

    <LinearLayout
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginBottom="124dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:alpha="1"
            android:contentDescription="TODO"
            android:onClick="prev"
            app:srcCompat="@drawable/icon_prev" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:alpha="1"
            android:contentDescription="TODO"
            android:onClick="next"
            app:srcCompat="@drawable/icon_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="cursive"
        android:text="@string/betukesath"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>